--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,6 @@
     <title>Hitmo</title>
   </head>
   <body>
-    <div id="root">
-      <script
-        async
-        src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"
-      ></script>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
